--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/logo.png" />
+		<!--<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/logo.png" />--->
 		<meta name="viewport" content="width=device-width" />
 		<link rel="manifest" href="/manifest.json">
 		<title>Project</title>
